# SW-CPP-game

./: .gitignore  CMakeLists.txt  README.md  main.cpp  structure.md
src/: CMakeLists.txt  common.hpp  defines.hpp  macros.hpp  main.cpp  node.hpp
src/ECS/: CMakeLists.txt  ecs.cpp
src/ecs/: CMakeLists.txt  ecs.cpp  ecs.hpp
src/scene/: CMakeLists.txt  scene.hpp
src/ui/: CMakeLists.txt  ui.cpp  ui.hpp
